# cni-talk-magalu

./: 10-mist-cni.conf  Dockerfile  httpd.yaml  kind.yaml  mist-cni  monitor-interfaces.sh  tracing-bin  upload.sh
tracing/: Cargo.toml  README.md
tracing/tracing/: Cargo.toml  build.rs
tracing/tracing-common/: Cargo.toml
tracing/tracing-ebpf/: Cargo.toml
tracing/tracing-ebpf/src/: main.rs
tracing/tracing/src/: main.rs
