[package]
name = "tracing-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-common = { path = "../tracing-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.8"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tracing"
path = "src/main.rs"
